@@ -35,11 +35,6 @@ message XAttrProto {
   optional bytes value = 3;
 }
   
-message XAttrEditLogProto {
-  optional string src = 1;
-  repeated XAttrProto xAttrs = 2;
-}
-
 enum XAttrSetFlagProto {
   XATTR_CREATE     = 0x01;
   XATTR_REPLACE    = 0x02;
