@@ -710,6 +710,9 @@ Release 2.8.0 - UNRELEASED
     HDFS-8712. Remove 'public' and 'abstracta modifiers in FsVolumeSpi and
     FsDatasetSpi (Lei (Eddy) Xu via vinayakumarb)
 
+    HDFS-8726. Move protobuf files that define the client-sever protocols to
+    hdfs-client. (wheat9)
+
   OPTIMIZATIONS
 
     HDFS-8026. Trace FSOutputSummer#writeChecksumChunks rather than
